# FindPic

./: .gitignore  CMakeLists.txt  readme.txt
SearchEng/: CMakeLists.txt  FindPicEngine.cpp  FindPicEngine.h  main.cpp
SearchEng/EigenSearch/: CMakeLists.txt  main.cpp  main.h  tryEigenFaceRecognizer.cpp  tryEigenFaceRecognizer.h
SearchEng/FaceDetection/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  main.cpp  main.h
SearchEng/FisherFaces/: CMakeLists.txt  main.cpp  main.h  tryFisherFaces.cpp  tryFisherFaces.h
SearchEng/LPBHistograms/: CMakeLists.txt  main.cpp  main.h  tryLPBHistogramRecognizer.cpp  tryLPBHistogramRecognizer.h
SearchEng/SimpleSearch/: CMakeLists.txt  FindPicEngine.cpp  FindPicEngine.h  main.cpp  main.h
